# nycschools

./: .gitattributes  .gitignore  README.md  REALESE-NOTES.md  RELEASE-NOTES.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks.py
book/: _config.yml  _toc.yml  about.md  api.rst  install-dev.md  install.md
data/: charter-ela.csv  charter-math.csv  nyc-ela.csv  nyc-math.csv  nysed-exams.csv  nysed-exams.feather  school-demographics.csv  school_locations.geojson
docs/: .buildinfo  about.html  conf.py  data-sources.html  genindex.html  index.html  index.md  index.rst  install-colab.html  install-dev.html  install.html  intro.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js  team.html
docs-source/: conf.py  index.md  index.rst  install.md
drafts/: _scratch.ipynb  budgets.ipynb  census.ipynb  charter-vs-community.ipynb  choro.ipynb  colocations.ipynb  d-index.ipynb  ela-pivot.ipynb  gentrification.ipynb  load-ccod.ipynb  loc-history.ipynb  neighborhood-names.geojson  ols-graphs.ipynb  school-search.ipynb  scrape-gpt.ipynb  seg-index.ipynb  segregation.ipynb  weighted-means.ipynb
nb/: anova.ipynb  anova.py  charter-ela.csv  charter-vs-community.ipynb  clean-query.ipynb  correlations.ipynb  dbn-beds-list.csv  dbn-list.csv  demo-math.csv  edt.csv  ela-pivot.ipynb  exams.ipynb  load-excel-test-data.ipynb  major-programs.csv  majors-counts.csv  math-ela-merge.ipynb  mixi.ipynb  network-graph.ipynb  nysed-math-ela.2021.csv  ols-graphs.ipynb  panda-basic.ipynb  panda-basics.ipynb  predict-data.csv  predict-ols.ipynb  school-demographics.csv  school-demographics.ipynb  school-search.ipynb  school_locations.geojson  schools.py  segregation.ipynb  soe-majors.csv  specialized-hs.ipynb  spider.ipynb  ui-graphs.ipynb  ui-viz.ipynb  ui.py  unit-test-scratch.ipynb
nycschools/: __init__.py  budgets.py  cep.py  class_size.py  dataloader.py  datasets.py  dataurls.json  exams.py  geo.py  nysed.py  schools.py  segregation.py  shsat.py  snapshot.py  tools.py  ui.py
school-data/: demo-data-dict.csv  demo-ela-math.csv  districts.csv  school_locations.csv
school_data/: __init__.py  exams.py  setup.py
server/: index.py
test/: test_budgets.py  test_cep.py  test_class_size.py  test_config.py  test_dataloader.py  test_exams.py  test_geo.py  (+4 more)
(+357 files in other folders)
