[metadata]
name = nycschools
version = 0.1.0
author = Matthew X. Curinga
author_email = matt@curinga.com
description = Tools to work with open data about New York City public schools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adelphi-ed-tech/school-data-portal
package_data={'dataurls': ['dataurls.json']}
project_urls =
    Bug Tracker = https://github.com/adelphi-ed-tech/school-data-portal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AGPLv3
    Operating System :: OS Independent

[options]
python_requires = >=3.7
